--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -82,7 +82,7 @@
     "alternativematch":"বিকল্প",
     "answer":"উত্তর",
     "wronganswer":"ভুল উত্তর যোগ করুন",
-    "wronganswertwo":"ভুল উত্তর"
-
+    "wronganswertwo":"ভুল উত্তর",
+    "quizAlternative":"কুইজের বিকল্প"
 }
 
