--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -119,7 +119,7 @@
   "addTopic": "Add Topic",
   "assignmentInstruct": "Assignment Instructions",
   "assignmentMark": "Mark the assignment",
-  "assignMarkPlace": "Enter assignment marks...",
+  "assignMarkPlace": "Enter assignment marks",
   "codePlace": "Write code here...",
   "assignDuration": "Input the time",
   "assignDurationPlace": "20 Minute",
@@ -136,5 +136,15 @@
   "addFillInTheGap": "Add fill in the gap",
   "addTrueFalse": "Add true false question",
   "addSingleWordAnswer": "Add question for single word answer",
-  "addDescriptiveQuestions": "Add descriptive questions"
+  "addDescriptiveQuestions": "Add descriptive questions",
+  "or":"OR",
+  "assignmentUploadDoc":"Upload assignment instructions",
+  "assignmentPassMark":"Enter the pass mark",
+  "assignmentpassMarkPlace":"Enter assignment pass marks",
+  "addVedio":"Add Video",
+  "videoName":"Video Name",
+  "videoPlace":"Enter video name",
+  "uploadVideo":"Upload video",
+  "videotranscript":"Transcript of video"
+
 }
