--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -151,5 +151,7 @@
   "newQuestion": "New question",
   "videoName": "Name of the video",
   "uploadVideo": "Upload video",
-  "videoTransacript": "Transcript of the video"
+  "videoTransacript": "Transcript of the video",
+  "videoLink":"Upload video link",
+  "writeVideolink":"Enter video link"
 }
