Added a new modal. Added background coor

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -83,6 +83,7 @@
     "answer":"উত্তর",
     "wronganswer":"ভুল উত্তর যোগ করুন",
     "wronganswertwo":"ভুল উত্তর",
-    "quizAlternative":"কুইজের বিকল্প"
+    "quizAlternative":"কুইজের বিকল্প",
+    "questionRelatedImage":"প্রশ্ন সম্পর্কিত ছবিটি আপলোড করুন"
 }
 
