--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -84,6 +84,16 @@
     "wronganswer":"ভুল উত্তর যোগ করুন",
     "wronganswertwo":"ভুল উত্তর",
     "quizAlternative":"কুইজের বিকল্প",
-    "questionRelatedImage":"প্রশ্ন সম্পর্কিত ছবিটি আপলোড করুন"
+    "questionRelatedImage":"প্রশ্ন সম্পর্কিত ছবিটি আপলোড করুন",
+    "editAssignment":"অ্যাসাইনমেন্ট এডিট করুন",
+    "save":"সেভ",
+    "time":"সময়",
+    "minute":"মিনিট",
+    "assignmentName":"অ্যাসাইনমেন্টের নাম",
+    "totalMarks":"সর্বমোট মার্ক",
+    "passmark":"পাস মার্ক",
+    "totaltime":"সর্বমোট সময়",
+    "assignmentView":"অ্যাসাইনমেন্ট ভিউ করুন",
+    "instruction":"নির্দেশাবলী"
 }
 
