Added en bn for assessment name

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -84,6 +84,7 @@
     "wronganswer":"ভুল উত্তর যোগ করুন",
     "wronganswertwo":"ভুল উত্তর",
     "quizAlternative":"কুইজের বিকল্প",
-    "questionRelatedImage":"প্রশ্ন সম্পর্কিত ছবিটি আপলোড করুন"
+    "questionRelatedImage":"প্রশ্ন সম্পর্কিত ছবিটি আপলোড করুন",
+    "assessment":"এসেসমেন্ট"
 }
 
