--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -84,7 +84,8 @@
     "wronganswer":"Add wrong answer",
     "wronganswertwo":"Wrong answer",
     "quizAlternative":"Quiz Option",
-    "questionRelatedImage":"Upload Question Related Image"
+    "questionRelatedImage":"Upload Question Related Image",
+    "assessment":"Assessment"
     
     
 }
