added some minor changes

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -88,6 +88,7 @@
     "assessment":"এসেসমেন্ট",
     "questionNo": " টি প্রশ্ন",
     "time":"সময়",
-    "minutes":"মিনিট"
+    "minutes":"মিনিট",
+    "marks":"নম্বর "
 }
 
