added new style

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -98,6 +98,7 @@
     "passmark":"পাস মার্ক",
     "totaltime":"সর্বমোট সময়",
     "assignmentView":"অ্যাসাইনমেন্ট ভিউ করুন",
-    "instruction":"নির্দেশাবলী"
+    "instruction":"নির্দেশাবলী",
+    "editAssesment" : "এডিট এসেসমেন্ট "
 }
 
