--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -140,12 +140,14 @@
   "assignmentPassMark":"পাস মার্ক ইনপুট দিন",
   "assignmentpassMarkPlace":"অ্যাসাইনমেন্টের পাস মার্ক ",
   "addVedio":"ভিডিও যোগ করুন",
+  "updateVedio":"ভিডিও এডিট করুন",
   "videoPlace":"ভিডিওর নাম লিখুন",
   "videotranscript":"ভিডিওর প্রতিলিপি",
   "selectCorrectAnswer": "সঠিক উত্তরটি নির্বাচন করুন",
   "newQuestion": "নতুন প্রশ্ন",
   "uploadVideo": "ভিডিও আপলোড করুন",
   "videoName": "ভিডিওর নাম",
+  "WritevideoName": "ভিডিওর নাম লিখুন",
   "answer": "Answer",
   "blank" : "ব্ল্যাঙ্ক",
   "saveAndAdd" : "সেভ এবং অ্যাড",
