--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -142,11 +142,13 @@
   "assignmentPassMark":"Enter the pass mark",
   "assignmentpassMarkPlace":"Enter assignment pass marks",
   "addVedio":"Add Video",
+  "updateVedio":"Edit Video",
   "videoPlace":"Enter video name",
   "videotranscript":"Transcript of video",
   "selectCorrectAnswer": "Select the correct answer",
   "newQuestion": "New question",
   "videoName": "Name of the video",
+  "WritevideoName": "Enter the video name",
   "uploadVideo": "Upload video",
   "videoTransacript": "Transcript of the video",
   "answer": "Answer",
