Chapter list info design update

--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -1,105 +1,104 @@
 {
-    "january":"January",
-    "february":"February",
-    "march":"March",
-    "april":"April",
-    "may":"May",
-    "june":"June",
-    "july":"July",
-    "august":"August",
-    "september":"September",
-    "october":"October",
-    "november":"November",
-    "december":"December",
-    "currentbatch": "Current Batch",
-    "activeCourse": "Active Course",
-    "traineeNumber": "Trainee Number",
-    "batchSituation": "Batch Situation",
-    "courseTimeline": "Course Timeline",
-    "batchNo" : "Batch No",
-    "learningField" : "Learning Area 1: Education Policy",
-    "progress" : "Active",
-    "courseDuration" : "Online : 10 Days",
-    "numberOfTrainee" : "50",
-    "number1":"25",
-    "number2":"400",
-    "green":"Green",
-    "red":"Red",
-    "purple":"Purple",
-    "proceedings":"Proceedings",
-    "progresses":"Progress",
-    "number0":"0",
-    "number10":"10",
-    "number20":"20",
-    "number30":"30",
-    "number40":"40",
-    "number50":"50",
-    "number60":"60",
-    "number70":"70",
-    "number80":"80",
-    "number90":"90",
-    "number100":"100",
-    "adminPanel": "Admin Panel",
-    "CLMS":"Login to CLMS",
-    "Elibrary":"Login to E-Library",
-    "guide":"Login to Teachers Guide",
-    "formative":"Login to Formative Assessment System",
-    "social":"Social Learning Platform",
-    "curriculumList":"Course List",
-    "searchList":"Search List",
-    "filterList":"Filter List",
-    "addCurriculum":"Add Course",
-    "pageSize":"Page Size",
-    "id":"Id",
-    "code":"Code",
-    "name":"Name",
-    "numberOfModule":"Number of Modules",
-    "action":"Action",
-    "userCreation":"Create User",
-    "addAssesment":"Add Assesment",
-    "assesmentName":"Assesment Name",
-    "assesmentNo":"Assesment 1",
-    "markInput":"Enter Mark",
-    "passmarkInput":"Enter Pass Mark",
-    "negativeMarkInput":"Enter Negative Mark",
-    "enterTime":"Enter Time",
-    "placeHolderNumber":"1",
-    "quiz":"Quiz",
-    "manualInput":"Manual Input",
-    "bulkUpload":"Bulk Upload",
-    "written":"Written",
-    "photo":"Photo",
-    "quizType":"Quiz Type",
-    "alternative":"Write Alternative",
-    "addMore":"Add More",
-    "addInfo":"Add Infomation",
-    "saveAdd":"Save and Add",
-    "or":"Or",
-    "instructions":"Enter the Instructions",
-    "mcqWithPhoto":"Add Mcq With Photos",
-    "quizDescription":"Quiz Description",
-    "addContent":"Add Content",
-    "alternativematch":"Alternative",
-    "answer":"Answer",
-    "wronganswer":"Add wrong answer",
-    "wronganswertwo":"Wrong answer",
-    "quizAlternative":"Quiz Option",
-    "questionRelatedImage":"Upload Question Related Image",
-    "assessment":"Assessment",
-    "minutes":"Minutes",
-    "marks":"Marks",
-    "editAssignment":"Edit Assignment",
-    "save":"Save",
-    "time":"Time",
-    "minute":"Minute",
-    "assignmentName":"Assignment name",
-    "totalMarks":"Total mark",
-    "passmark":"Pass Mark",
-    "totaltime":"Total time",
-    "assignmentView":"View the assignment",
-    "instruction":"Instruction",
-    "editAssesment" : "Edit Assessment",
-    "question":"Question"
-    
-    
+  "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December",
+  "currentbatch": "Current Batch",
+  "activeCourse": "Active Course",
+  "traineeNumber": "Trainee Number",
+  "batchSituation": "Batch Situation",
+  "courseTimeline": "Course Timeline",
+  "batchNo": "Batch No",
+  "learningField": "Learning Area 1: Education Policy",
+  "progress": "Active",
+  "courseDuration": "Online : 10 Days",
+  "numberOfTrainee": "50",
+  "number1": "25",
+  "number2": "400",
+  "green": "Green",
+  "red": "Red",
+  "purple": "Purple",
+  "proceedings": "Proceedings",
+  "progresses": "Progress",
+  "number0": "0",
+  "number10": "10",
+  "number20": "20",
+  "number30": "30",
+  "number40": "40",
+  "number50": "50",
+  "number60": "60",
+  "number70": "70",
+  "number80": "80",
+  "number90": "90",
+  "number100": "100",
+  "adminPanel": "Admin Panel",
+  "CLMS": "Login to CLMS",
+  "Elibrary": "Login to E-Library",
+  "guide": "Login to Teachers Guide",
+  "formative": "Login to Formative Assessment System",
+  "social": "Social Learning Platform",
+  "curriculumList": "Course List",
+  "searchList": "Search List",
+  "filterList": "Filter List",
+  "addCurriculum": "Add Course",
+  "pageSize": "Page Size",
+  "id": "Id",
+  "code": "Code",
+  "name": "Name",
+  "numberOfModule": "Number of Modules",
+  "action": "Action",
+  "userCreation": "Create User",
+  "addAssesment": "Add Assesment",
+  "assesmentName": "Assesment Name",
+  "assesmentNo": "Assesment 1",
+  "markInput": "Enter Mark",
+  "passmarkInput": "Enter Pass Mark",
+  "negativeMarkInput": "Enter Negative Mark",
+  "enterTime": "Enter Time",
+  "placeHolderNumber": "1",
+  "quiz": "Quiz",
+  "manualInput": "Manual Input",
+  "bulkUpload": "Bulk Upload",
+  "written": "Written",
+  "photo": "Photo",
+  "quizType": "Quiz Type",
+  "alternative": "Write Alternative",
+  "addMore": "Add More",
+  "addInfo": "Add Infomation",
+  "saveAdd": "Save and Add",
+  "or": "Or",
+  "instructions": "Enter the Instructions",
+  "mcqWithPhoto": "Add Mcq With Photos",
+  "quizDescription": "Quiz Description",
+  "addContent": "Add Content",
+  "alternativematch": "Alternative",
+  "answer": "Answer",
+  "wronganswer": "Add wrong answer",
+  "wronganswertwo": "Wrong answer",
+  "quizAlternative": "Quiz Option",
+  "questionRelatedImage": "Upload Question Related Image",
+  "assessment": "Assessment",
+  "minutes": "Minutes",
+  "marks": "Marks",
+  "editAssignment": "Edit Assignment",
+  "save": "Save",
+  "questionNo": " Question",
+  "time": "Time",
+  "minute": "Minute",
+  "assignmentName": "Assignment name",
+  "totalMarks": "Total mark",
+  "passmark": "Pass Mark",
+  "totaltime": "Total time",
+  "assignmentView": "View the assignment",
+  "instruction": "Instruction",
+  "editAssesment": "Edit Assessment",
+  "question": "Question"
 }
