view assessment info update

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -126,8 +126,8 @@
   "assignCheckboxTwo": "আপলোড ফাইল",
   "nameAndCode": "পাঠ্যক্রমের নাম : কোড",
   "fillinthegap": "ফিল ইন দি গ্যাপ",
-  "instruction":"নির্দেশনাবলী লিখুন:",
-  "giveMark":"মার্ক দিন",
+  "instruction": "নির্দেশনাবলী লিখুন:",
+  "giveMark": "মার্ক দিন",
   "addBlendedQuestion": "সম্মিলিত প্রশ্নপত্র যোগ করুন",
   "addMcqWithPicture": "এমসিকিউ উইথ পিকচার যোগ করুন",
   "addMatchingQuestion": "ম্যাচিং কোয়েশ্চেন যোগ করুন",
@@ -135,29 +135,29 @@
   "addTrueFalse": "সত্য/মিথ্যা যোগ করুন",
   "addSingleWordAnswer": "এক কোথায় উত্তর যোগ করুন",
   "addDescriptiveQuestions": "বর্ণনামূলক প্রশ্নপত্র যোগ করুন",
-  "or":"অথবা",
-  "assignmentUploadDoc":"অ্যাসাইনমেন্টের নির্দেশাবলী আপলোড করুন",
-  "assignmentPassMark":"পাস মার্ক ইনপুট দিন",
-  "assignmentpassMarkPlace":"অ্যাসাইনমেন্টের পাস মার্ক ",
-  "addVedio":"ভিডিও যোগ করুন",
-  "updateVedio":"ভিডিও এডিট করুন",
-  "videoPlace":"ভিডিওর নাম লিখুন",
-  "videotranscript":"ভিডিওর প্রতিলিপি",
+  "or": "অথবা",
+  "assignmentUploadDoc": "অ্যাসাইনমেন্টের নির্দেশাবলী আপলোড করুন",
+  "assignmentPassMark": "পাস মার্ক ইনপুট দিন",
+  "assignmentpassMarkPlace": "অ্যাসাইনমেন্টের পাস মার্ক ",
+  "addVedio": "ভিডিও যোগ করুন",
+  "updateVedio": "ভিডিও এডিট করুন",
+  "videoPlace": "ভিডিওর নাম লিখুন",
+  "videotranscript": "ভিডিওর প্রতিলিপি",
   "selectCorrectAnswer": "সঠিক উত্তরটি নির্বাচন করুন",
   "newQuestion": "নতুন প্রশ্ন",
   "uploadVideo": "ভিডিও আপলোড করুন",
   "videoName": "ভিডিওর নাম",
   "WritevideoName": "ভিডিওর নাম লিখুন",
   "answer": "Answer",
-  "blank" : "ব্ল্যাঙ্ক",
-  "saveAndAdd" : "সেভ এবং অ্যাড",
+  "blank": "ব্ল্যাঙ্ক",
+  "saveAndAdd": "সেভ এবং অ্যাড",
   "addChapter": "অধ্যায় যোগ করুন",
   "videoTransacript": "ভিডিওর প্রতিলিপি",
-  "videoLink":"ভিডিওর লিংক আপলোড করুন",
-  "writeVideolink":"ভিডিওর লিংক লিখুন",
+  "videoLink": "ভিডিওর লিংক আপলোড করুন",
+  "writeVideolink": "ভিডিওর লিংক লিখুন",
   "newQues": "নতুন প্রশ্ন",
-  "addBlank" : "ব্ল্যাঙ্ক যোগ করুন",
+  "addBlank": "ব্ল্যাঙ্ক যোগ করুন",
   "dragAndDropCorrectAnswer": "সঠিক উত্তরটি ড্র্যাগ করে নিয়ে আসুন",
   "passMark": "পাস মার্ক",
-  "descriptiveQuestionPaper": "বর্ণনামূলক প্রশ্নপত্র"
+  "questionPaper": "প্রশ্নপত্র"
 }
