--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -128,8 +128,8 @@
   "assignCheckboxTwo": "Upload File",
   "nameAndCode": "Course Name : Code",
   "fillinthegap": "Fill in the gap",
-  "instruction":"Enter the instructions:",
-  "giveMark":"Mark",
+  "instruction": "Enter the instructions:",
+  "giveMark": "Mark",
   "addBlendedQuestion": "Add blended question",
   "addMcqWithPicture": "Add MCQ question with picture",
   "addMatchingQuestion": "Add matching question",
@@ -137,14 +137,14 @@
   "addTrueFalse": "Add true false question",
   "addSingleWordAnswer": "Add question for single word answer",
   "addDescriptiveQuestions": "Add descriptive questions",
-  "or":"OR",
-  "assignmentUploadDoc":"Upload assignment instructions",
-  "assignmentPassMark":"Enter the pass mark",
-  "assignmentpassMarkPlace":"Enter assignment pass marks",
-  "addVedio":"Add Video",
-  "updateVedio":"Edit Video",
-  "videoPlace":"Enter video name",
-  "videotranscript":"Transcript of video",
+  "or": "OR",
+  "assignmentUploadDoc": "Upload assignment instructions",
+  "assignmentPassMark": "Enter the pass mark",
+  "assignmentpassMarkPlace": "Enter assignment pass marks",
+  "addVedio": "Add Video",
+  "updateVedio": "Edit Video",
+  "videoPlace": "Enter video name",
+  "videotranscript": "Transcript of video",
   "selectCorrectAnswer": "Select the correct answer",
   "newQuestion": "New question",
   "videoName": "Name of the video",
@@ -152,13 +152,13 @@
   "uploadVideo": "Upload video",
   "videoTransacript": "Transcript of the video",
   "answer": "Answer",
-  "blank" : "Blank",
-  "saveAndAdd" : "Save and Add",
-  "videoLink":"Upload video link",
-  "writeVideolink":"Enter video link",
+  "blank": "Blank",
+  "saveAndAdd": "Save and Add",
+  "videoLink": "Upload video link",
+  "writeVideolink": "Enter video link",
   "newQues": "New Question",
-  "addBlank" : "Add Blank",
-  "dragAndDropCorrectAnswer":"Drag and drop correct answer",
+  "addBlank": "Add Blank",
+  "dragAndDropCorrectAnswer": "Drag and drop correct answer",
   "passMark": "Pass mark",
-  "descriptiveQuestionPaper": "Descriptive question paper"
+  "questionPaper": "Question paper"
 }
