small design fixed

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -89,7 +89,7 @@
     "questionNo": " টি প্রশ্ন",
     "time":"সময়",
     "minutes":"মিনিট",
-    "marks":"নম্বর ",
+    "marks":"সর্বমোট নম্বর ",
     "editAssignment":"অ্যাসাইনমেন্ট এডিট করুন",
     "save":"সেভ",
     "minute":"মিনিট",
