--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -87,7 +87,7 @@
   "questionRelatedImage": "Upload Question Related Image",
   "assessment": "Assessment",
   "minutes": "Minutes",
-  "marks": "Marks",
+  "marks": "Total mark",
   "editAssignment": "Edit Assignment",
   "save": "Save",
   "questionNo": " Question",
