Design Problem Fixed

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -39,7 +39,7 @@
     "number80":"৮০",
     "number90":"৯০",
     "number100":"১০০",
-    "adminPanel": "অ্যাডমিন প্যানেল",
+    "adminPanel": "ড্যাশবোর্ড",
     "CLMS":"CLMS এ লগইন করুন",
     "Elibrary":"ই-লাইব্রেরি এ লগইন করুন",
     "guide":"টিচার্স গাইড এ লগইন করুন",
