--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -83,7 +83,7 @@
   "SelectThis": "সিলেক্ট করুন",
   "forgotPassword": "পাসওয়ার্ড ভুলে গেছেন?",
   "courseName": "অধিবেশনের নাম",
-  "adminPanel": "অ্যাডমিন প্যানেল",
+  "adminPanel": "ড্যাশবোর্ড",
   "addCourseSettings": "কোর্স সেটিংস অ্যাড করুন",
   "courseCode": "কোর্স কোড",
   "featureImage": "ফীচার ইমেজ",
@@ -153,8 +153,8 @@
   "saveAndAdd": "সেভ এবং অ্যাড",
   "addChapter": "অধ্যায় যোগ করুন",
   "videoTransacript": "ভিডিওর প্রতিলিপি",
-  "videoLink": "ভিডিওর লিংক আপলোড করুন",
-  "writeVideolink": "ভিডিওর লিংক লিখুন",
+  "videoLink": "ভিডিওর লিংক লিখুন",
+  "writeVideolink": "উদাহরণ স্বরূপ",
   "newQues": "নতুন প্রশ্ন",
   "addBlank": "ব্ল্যাঙ্ক যোগ করুন",
   "dragAndDropCorrectAnswer": "সঠিক উত্তরটি ড্র্যাগ করে নিয়ে আসুন",
