--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -83,7 +83,7 @@
   "editUser": "Edit User",
   "SelectThis": "Please Select",
   "forgotPassword": "Forgot Password?",
-  "courseName": "Course Name",
+  "courseName": "Dashboard",
   "adminPanel": "Admin Panel",
   "addCourseSettings": "Add Course Settings",
   "courseCode": "Course Code",
@@ -154,8 +154,8 @@
   "answer": "Answer",
   "blank": "Blank",
   "saveAndAdd": "Save and Add",
-  "videoLink": "Upload video link",
-  "writeVideolink": "Enter video link",
+  "videoLink": "Enter video link",
+  "writeVideolink": "Example",
   "newQues": "New Question",
   "addBlank": "Add Blank",
   "dragAndDropCorrectAnswer": "Drag and drop correct answer",
