--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -39,7 +39,7 @@
   "number80": "80",
   "number90": "90",
   "number100": "100",
-  "adminPanel": "Admin Panel",
+  "adminPanel": "Dashboard",
   "CLMS": "Login to CLMS",
   "Elibrary": "Login to E-Library",
   "guide": "Login to Teachers Guide",
