--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -94,7 +94,7 @@
   "iconLimit": "আইকন ইমেজ সাইজ ৩০০x৩০০ এবং অনধিক ১০০ কিলোবাইট",
   "supDocLimit": "অনধিক ৫ মেগাবাইট",
   "updateCourse": "অধিবেশন আপডেট করুন",
-  "update": " আপডেট করুন",
+  "update": " আপডেট",
   "profileImageLimit": "সর্বাধিক আকার ১০০ কিলোবাইট",
   "warning": "সতর্কতা",
   "message": "আপনি কি এটি স্থায়ীভাবে মুছে ফেলতে চান?",
