login page updated

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -7,7 +7,8 @@
   "loginHere": "প্রবেশ করুন",
   "registerHere": "নিবন্ধন করুন",
   "welcomeToLms": "HSEP লার্নিং ম্যানেজমেন্ট সিস্টেম - এ স্বাগতম",
-  "learningManagementSystem": "লার্নিং ম্যানেজমেন্ট সিস্টেম এল এম এস",
+  "learningManagementSystem": "লার্নিং ম্যানেজমেন্ট সিস্টেম",
+  "LMS":"এল এম এস",
   "learningManagementSystemLoginTitle": " লার্নিং ম্যানেজমেন্ট সিস্টেমে লগইন করুন",
   "eLibrary": "ই-লাইব্রেরি",
   "eLibraryLoginTitle": "ই - লাইব্রেরিতে লগইন করুন",
