--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -8,7 +8,8 @@
   "loginHere": "Login",
   "registerHere": "Register",
   "welcomeToLms": "Welcome to HSEP Learning Management System",
-  "learningManagementSystem": "Learning Management System LMS",
+  "learningManagementSystem": "Learning Management System",
+  "LMS":"LMS",
   "learningManagementSystemLoginTitle": "Login to Learning Management System",
   "eLibrary": "e-Library",
   "eLibraryLoginTitle": "Login to e-Library",
