--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -100,6 +100,8 @@
     "assignmentView":"অ্যাসাইনমেন্ট ভিউ করুন",
     "instruction":"নির্দেশাবলী",
     "editAssesment" : "এডিট এসেসমেন্ট",
-    "question":"প্রশ্ন"
+    "question":"প্রশ্ন",
+    "showing":"দেখানো হচ্ছে ",
+    "outOf": "টির মধ্যে "
 }
 
