--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -166,6 +166,7 @@
   "module_name_en": "অধ্যায়ের নাম (ইংরেজিতে)",
   "addTrainee":"প্রশিক্ষণার্থী যোগ করুন",
   "traineeName":"প্রশিক্ষণার্থীর নাম",
-  "institution":"প্রতিষ্ঠান"
+  "institution":"প্রতিষ্ঠান",
+  "addTraineer":"প্রশিক্ষক যোগ করুন"
 
 }
